--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <canvas id="canvas-id">
-    Sorry your browser dosn't support HTML5
+    Sorry your browser doesn't support HTML5
   </canvas>
 </body>
 </html>
